  * Thhe GPU with a GOP instance having the highest resolution is now selected instead (as intended)
  * NB: RefindPlus does not check whether a GPU is actually connected to a display
  *     Hence, a blank display will result if the highest resolution GPU is not connected
  * This bug was introduced in v0.12.0.AN (Commit 62e6fe8)
- Improves Keystroke Flushing
  * Device errors are returned when attempting to read keystrokes under some conditions
  * This appears to typically only happen on UEFI PC
  * RefindPlus now further attempts to ensure the read takes place and/or mitigate the impact
- Improves APFS Volume Role Identification
  * APFS volume roles are now identified by their predefined 'Disk Roles' when possible
  * Additionally, the 'SyncAPFS' feature has been optimised for faster completion
- Improves APFS Partition Tyoe Detection
  * RefindPlus Primarily uses the Partition Type Guid to identify APFS Partitions
  * Some UEFI PC may however not provide a Partition Type Guid for APFS volumes
  * This affected the operation of the SyncAPFS feature which had to be disabled on such units
  * RefindPlus can now determine APFS partitions when the Partition Type Guid is not present
- Improves 'PreviousBoot' Implementation
  * Only Loaders (Row 1 Items) are saved as 'PreviousBoot' when this is configured to be saved
  * Such Loaders are only saved after verification and not regardless as was the case
- Improves 'IgnorePreviousBoot' Implementation
  * This token is now enforced everywhere when set
  * Setting '+' under the 'default_selection' token will therefore have no effect in such cases
  * NB: Setting 'default_selection "+"' remains equivalent to commenting that token out
  *     This default setting will continue to function as before
- Improves NVRAM Management
  * NVRAM Entries (Emulated and Hardware) are fully cleared before new entries are made
- Improves Graphics Mode Selection